--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -1,6 +1,41 @@
+body {
+    background: white;
+    height: 100vh;
+    margin-left:100px !important;
+    margin-right:100px !important;
+  }
+
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 40%;
+  }
+  
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  .container {
+    padding: 2px 16px;
+  }
+
+.tr{
+    margin-bottom: 20px;
+}
+.td{
+    margin:20px;
+
+}
+#cont{
+    height:200px;
+    background-color: gray;
+}
+
 .glyphicon { margin-right:5px; }
 .thumbnail
 {
+    margin-left:100px !important;
+    margin-right:100px !important;
     margin-bottom: 20px;
     padding: 0px;
     -webkit-border-radius: 0px;
