--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -86,14 +86,18 @@
   
  
  
-  .footer{
+  .footer {
     min-height: 100px;
     background-color: #111;
-    height: auto !important;
-    height: 100%;
-    margin: 0 auto -4em;
+   
+    height: 10px;
+   
+    /* position: fixed; */
+    left: 0;
+    bottom: 0;
+    margin-top: auto;
+    width: 100%;
   }
-
   .center {
     display: block;
     margin-left: auto;
